traefik/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.9.1
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
      nodePort: 30858
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
      nodePort: 31211
    - name: nginx
      protocol: TCP
      port: 5000
      targetPort: 5000
    - name: pgadmin
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: dashboard
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: LoadBalancer
  sessionAffinity: None
