traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: app

spec:
  rules:
    - host: hello-local.info
      http:
        paths:
          - path: /nginx
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 5000
          - path: /pgadmin
            pathType: Exact
            backend:
              service:
                name:  pgadmin-svc
                port:
                  number: 8000
